--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="7iK-cq-leC" id="GTb-rv-meE"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="AIg-YD-2Mr"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="AIg-YD-2Mr">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ftn-yE-zrg">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="7iK-cq-leC" id="wcx-p0-bx3"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Gy-7S-jJ8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
